# rlgym-ai-detection-v2

./: CHANGELOG.md  README.md  policy.yaml  pyproject.toml
docs/: ULTRA_DETECTOR.md
rlgym_ai_detection/: __init__.py  cli.py  conformal_mondrian.py  deep_ensemble.py  features.py  features_extra.py  normalize_segment.py  ood.py  ood_extra.py  pipeline.py  policies.py  utils.py
rlgym_ai_detection/data/: test.jsonl  train.jsonl  val.jsonl
rlgym_ai_detection/ultra_detector/: __init__.py  calibration.py  context_normalizer.py  detector.py  detector_base.py  enterprise_prompt_detector.py  features_extra.py  features_extra2.py
scripts/: benchmark.py  dashboard.py  make_preds.py
tests/: test_components.py  test_pipeline.py  test_smoke.py  test_ultra_detector.py  test_validation.py
