[project]
name = "rlgym-ai-detection"
version = "1.4.0"
description = "Robust AI-origin detection pipeline with ensembles, OOD, conformal abstention, and policy tiers."
authors = [{name="RL-Gym Team"}]
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.2","joblib>=1.3"]
full = ["scikit-learn>=1.2","sentence-transformers>=2.2","joblib>=1.3","matplotlib>=3.7"]

[project.scripts]
detect = "rlgym_ai_detection.cli:main"

[tool.setuptools]
packages = ["rlgym_ai_detection"]

[tool.setuptools.package-data]
rlgym_ai_detection = ["*.yaml"]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
